--- a/01_HTML/01_basic.html
+++ b/01_HTML/01_basic.html
@@ -23,6 +23,9 @@
   4. 태그 형식
       1) <태그이름 속성="값" 속성="값" 속성="값"></태그이름>
       2) <태그이름 속성="값" 속성="값" 속성="값"/>
+  5. 태그 요소
+      1) 블록 요소    : 해당 요소의 블록(라인 전체)에 적용되는 태그, 자동으로 줄 바꿈된다.
+      2) 인라인 요소  : 해당 요소의 인라인(요소 자체)에 적용되는 태그
 -->
 <!-- 
   HTML5 기본 구조
@@ -34,10 +37,79 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Comparible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>페이지제목</title>
 </head>
 <body>
-  Hello World
-  크아아악
+
+  <!-- 
+    1. 줄 바꿈
+      1) <br> 또는 <br/>
+      2) 원하는 만큼 사용할 수 있다.
+   -->
+  <br>
+  <br/>
+  
+  <!-- 
+    2. 수평선
+    1) <hr> 또는 <hr/>
+    2) 화면의 너비만큼 수평선을 만든다.
+  -->
+  <hr>
+
+  <!-- 
+    3. 엔티티 코드
+      1) HTML 문서에서 사용하는 특수 문자
+      2) &로 시작하고 ;으로 끝난다.
+  -->
+  작다(less than) &lt;<br>
+  크다(greater than) &gt;<br>
+  작거나 같다(less than equal) &le;<br>
+  크거나 같다(greater than equal) &ge;<br>
+  앰퍼센트 &amp;<br>
+  공백 &nbsp;<br>
+  <hr>
+
+  <!-- 
+    4. 제목 태그(heading tah)
+      1)블록 여서
+      2) 제목을 만드는 태그이다.
+      3) 글자 크기를 조정하고 글자를 굵게 표시한다.
+      4) <h1>, <h2>, <h3>, <h4>, <h5>, ,h6>
+   -->
+  <h1> 1번째로 큰 제목(32px)</h1>
+  <h2> 2번째로 큰 제목</h2>
+  <h3> 3번째로 큰 제목</h3>
+  <h4> 4번째로 큰 제목(16px)</h4>
+  <h5> 5번째로 큰 제목</h5>
+  <h6> 6번째로 큰 제목(10px)</h6>
+  <hr>
+
+  <!-- 
+    5. 문단 태그(paragraph tag)
+      1) 블록 요소
+      2) 문단을 만드는 태그이다.
+  -->
+  <p>여기는 
+    &lt;p&gt;태그       입니다. </p>
+  <hr>
+
+  <!-- 
+    6. 형식을 갖춘 문단 태그(pre-formatted paragraph tag)
+      1) 블록 요소
+      2) 문단에 입력된 모든 요소가 그대로 나온다.
+      3) 공백 문자(스페이스, 줄 바꿈)를 그대로 나타낼 때 주로 사용한다.
+  -->
+  <pre>여기는
+    &lt;pre&gt;태그    입니다.</pre>
+  <pre>
+    o         o
+
+
+    ===========
+  </pre>
+
 </body>
 </html>
