--- a/02_CSS/07_selector.html
+++ b/02_CSS/07_selector.html
@@ -32,5 +32,79 @@
     4. class 선택자
       .class
   -->
+
+
+  <style>
+    
+    /* 후손 선택자 : 조상 후손 */
+    ol label {
+      color: deepskyblue;
+    }
+  </style>
+
+  <div>
+    <ol>
+      <li>
+        <input type="radio" name="wakeup" id="six">
+        <label for="six">6시</label>
+      </li>
+      <li>
+        <input type="radio" name="wakeup" id="seven">
+        <label for="seven">7시</label>
+      </li>
+      <li>
+        <input type="radio" name="wakeup" id="eight">
+        <label for="eight">8시</label>
+      </li>
+    </ol>
+  </div>
+
+  <hr>
+  <style>
+    /* 모든 형제 선택자 : 형제 ~ 형제 */
+    .asia > h4 ~ p {
+      color: darkturquoise;
+    }
+  </style>
+
+  <div class="asia">
+    <h4>아시아</h4>
+    <p>대한민국</p>
+    <p>중국</p>
+    <p>일본</p>
+    <p>베트남</p>
+  </div>
+
+  <hr>
+  <style>
+    /* 인접 형제 선택자 : 형제 + 형제  */
+    .hobby > h4 + input + label {
+      color: firebrick;
+    }
+  </style>
+
+  <div class="hobby">
+    <h4>취미</h4>
+    <input type="checkbox" id="soccer">
+    <label for="soccer">축구</label>
+    <input type="checkbox" id="baseball">
+    <label for="baseball">야구</label>
+    <input type="checkbox" id="basketball">
+    <label for="basketball">농구</label>
+    <input type="checkbox" id="trip">
+    <label for="trip">여행</label>
+    <input type="checkbox" id="cook">
+    <label for="cook">요리</label>
+  </div>
+
+  <hr>
+  <style>
+
+  </style>
+
+  <div>
+    
+  </div>
+
 </body>
 </html>
