--- a/01_HTML/07_form.html
+++ b/01_HTML/07_form.html
@@ -99,7 +99,7 @@
   <p>
     <input type="text" list="domain" placeholder="입력 또는 선택">
     <datalist id="domain">
-      <option value="kakao.com"/>
+      <option value="kakao.com"></option>
       <option value="gmail.com"></option>
       <option value="naver.com"></option>
     </datalist>
