--- a/01_HTML/HTML보충.html
+++ b/01_HTML/HTML보충.html
@@ -194,7 +194,7 @@
         <td>
           <table class="prac">
             <tbody>
-              <caption>우리펜션 객실안내</caption>
+              <caption><strong>우리펜션 객실안내</strong></caption>
               <tr>
                 <th>방이름</th>
                 <th>고객구분</th>
@@ -258,7 +258,7 @@
   <hr>
 
   <h1>연습3</h1>
-  <div>
+  <div> 
     <form method="post">
       <table>
         <thead>
