--- a/02_CSS/13_float.html
+++ b/02_CSS/13_float.html
@@ -39,7 +39,7 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et dignissim lorem. Sed scelerisque, lacus at lobortis dictum, sem nisl tristique mi, in elementum turpis nunc vitae quam. Donec erat ligula, dapibus ac sapien quis, tincidunt facilisis felis. Curabitur vitae nibh ut erat faucibus imperdiet eget consequat felis. Proin facilisis tellus leo. Etiam eu nunc nec ex rutrum tincidunt. Donec ultricies quis augue ac ullamcorper. Sed non vehicula turpis, in ullamcorper quam. Aliquam iaculis ipsum in leo vehicula venenatis. Duis venenatis ligula orci, vitae consequat justo porttitor eu. Quisque vitae odio in nulla posuere bibendum a eget nunc. Integer et malesuada nisl. Vestibulum odio turpis, luctus et commodo non, ultricies non mauris. Cras rutrum vulputate vulputate.
   </div>
   <hr>
-
+  
   <style>
     .wrap2 > div {
       box-sizing: border-box;
@@ -56,6 +56,8 @@
     .wrap2 > .box3 {
       /* float 요소의 영역에서 벗어나시오. (left, right, both) */
       clear: left; /* float: left;에서 벗어나시오 */
+      width: 600px;
+      height: 100px;
     }
   </style>
   <div class="wrap2">
