--- a/01_HTML/01_basic.html
+++ b/01_HTML/01_basic.html
@@ -18,7 +18,7 @@
       1) 기능이 정해져 있는 약속된 태그만 사용 가능
       2) 시작 태그 <tag>와 종료 태그 </tag>로 구성된다.
       3) 나 홀로 태그(단독 태그) <tag> 또는 <tag/>
-      4) 모두 소문자로 자성한다
+      4) 모두 소문자로 작성한다
       5) 계층 구조(부모-자식)를 가진다.
   4. 태그 형식
       1) <태그이름 속성="값" 속성="값" 속성="값"></태그이름>
@@ -30,7 +30,7 @@
 <!-- 
   HTML5 기본 구조
   1. 선언부 : <!DOCTYPE html> 또는 <!doctype html>
-  2. <html> 태그 : 문서의 모든 내용을 포함한느 최상위 태그
+  2. <html> 태그 : 문서의 모든 내용을 포함하는 최상위 태그
   3. <head> 태그 : 각종 헤더값을 설정하는 태그
   4. <body> 태그 : 문서의 본문 내용을 포함하는 태그
 -->
