--- a/02_CSS/15_layout.html
+++ b/02_CSS/15_layout.html
@@ -67,7 +67,7 @@
   
   <style>
     /* 
-      2. float과 oveflow 속성 사용
+      2. float + oveflow 속성
         1) box를 하나 만들어 수평으로 배치할 box들을 내부에 배치한다.
         2) 부모 요소에 overflow 속성을 visible이 아닌 값을 설정한다. (주로 hidden 설정)
         3) 자식 요소에 float 속성을 설정한다.
