--- a/03_JS/01_variable.html
+++ b/03_JS/01_variable.html
@@ -66,9 +66,10 @@
       3. 콘솔 출력 (F12 - Console 탭)
         console.log(출력메시지)
     */
-   alert('Hello World');
-   document.write('<h1>Hello World</h1>')
-   console.log('Hello World')
+    alert(190000000000 * 0.96);
+    alert('Hello World');
+    document.write('<h1>Hello World</h1>')
+    console.log('Hello World')
   </script>
 
   <script>
@@ -140,6 +141,7 @@
     console.log(z);   // Reference Error 발생 (let 키워드로 호이스팅 된 변수는 초기화 되지 않기 때문에 접근 시 오류가 발생함)
     let z = 30;       // let z; z = 30; 으로 분리해서 호이스팅된다.
     comsole.log(z);
+    
   </script>
 
 
