--- a/03_JS/07_function.html
+++ b/03_JS/07_function.html
@@ -284,34 +284,36 @@
     }, 3000);
     clearTimeout(timerId);
 
-    // setInterval
-    // var n = 1;
-    // var timerId = setInterval(function(){
-    //   if(n > 10){
-    //     clearInterval(timerId);
-    //   } else {
-    //     console.log(n++);
-    //   }
-    // }, 1000);
+    setInterval
+    var n = 1;
+    var timerId = setInterval(function(){
+      if(n > 10){
+        clearInterval(timerId);
+      } else {
+        console.log(n++);
+      }
+    }, 1000);
   </script>
 
-  <div id="timer1">
+  <div id="timer1"></div>
     <script>
       // 문제. 5초 타이머 동작시키기(5 4 3 2 1 발사)
       var timer1 = document.getElementById('timer1');
       var n = 5;
       var timerId = setInterval(function(){
         if(n === 0){
-          timer1.innerHTML = '<h1>발사</h1>';
+          timer1.innerHTML = '<h1>발사</h1>'; 
           // console.log('발사!');
           clearInterval(timerId);
         } else {
+          n--;
           timer1.innerHTML = '<h1>' + n-- + '</h1>';
           // console.log(n--);
         }
       }, 1000);
     </script>
 
+    <div id="timer2"></div>
     <script>
       // 문제. n초 타이머 동작(n ... 3 2 1 발사) : setTimeout + 재귀 호출
       var timer2 = document.getElementById('timer2');
@@ -320,7 +322,7 @@
           if(countDown === 0){
             timer2.innerHTML = '<h1>발사</h1>'
           } else {
-            timer2.innerHTML = '<h1>' + 'countDown' + '</h1>'
+            timer2.innerHTML = '<h1>' + countDown + '</h1>'
             myTimer(countDown - 1);
           }
         }, 1000)
@@ -329,7 +331,6 @@
       myTimer(5);
     </script>
 
-  </div>
 
 
 
