--- a/03_JS/12_browser_object.html
+++ b/03_JS/12_browser_object.html
@@ -55,8 +55,16 @@
 
   <!-- window 객체 -->
   <div>
-    <input type="button" value="창열기" id="btn_open">
+    <label for="send_msg">전송 메시지</label>
+    <input type="text" id="send_msg">
+    <input type="button" value="전송" id="btn_send">
   </div>
+  <div>
+    <div id="receive_msg">
+
+    </div>
+  </div>
+
   <script>
     /*
       window.open(url, target, feature)
@@ -67,16 +75,35 @@
         2) 창 위치 : top, bottom, left, right
     */
 
-   document.getElementById('btn_open').addEventListener('click', function(){
+    // 전역 객체(모든 함수에서 사용이 가능함)
+    var popup = null;
+    function openWindow(){
       // 브라우저 화면의 정중앙에 창 열기, 창 크기는 640px * 480px
       var width = 640;
       var height = 480;
       var left = (screen.width-width)/2;
       var top = (screen.height-height)/2;
       var feature = 'width=' + width + ',height=' + height + ',left=' + left + ',top=' + top;
-  
-      window.open('', '', feature);
+      // popup이 열려 있지 않으면 popup을 연다.
+      if(popup === null || popup.closed){
+        window.open('12_popup.html', '', feature);
+      }
 
+      
+    }
+    function sendMsg(){
+      // 12.popup.html 본문을읽은 뒤 스크립트를 처리할 수 있도록 load 이벤트를 사용함
+      popup.onload() = fountion;
+       
+      // 12_browser_bojetct.html -> 12_popup.html
+      //    <input_id="send_msg">     <div id="">
+      popup.alert(document.getElementById('send_msg').value);
+      popup.document.getElementById('receive.msg').textContent = document.getElementById('send_msg').value;
+    }
+
+   document.getElementById('btn_send').addEventListener('click', function(){
+    openWindow();
+    sendMsg();
     })
 
   </script>
