--- a/03_JS/연습문제1_JS.html
+++ b/03_JS/연습문제1_JS.html
@@ -63,6 +63,7 @@
   <div id="box2"></div>
   <style>
     #box2 {
+      
       width: 100px;
       height: 100px;
     }
@@ -70,7 +71,12 @@
   <script>
     // 문제2. 0.5초마다 colors 배열의 각 요소를 box2의 background-color로 지정하시오.
     var colors = ['red', 'orange', 'yellow', 'green', 'blue', 'navy', 'purple'];
-    
+    var n = 0;
+    setInterval(() => {
+      document.getElementById('box2').style.backgroundColor = colors[(n++)%7];
+    }, 500);
+
+
   </script>
 
   <hr>
